Fix alignment of dl dd dl entities

--- a/templates/static/doc/chapter.css
+++ b/templates/static/doc/chapter.css
@@ -103,7 +103,7 @@ dl dd
 
 dl dd dl
 {
-  margin-left: -180px;
+  margin-left: -2em;
 }
 
 
